force-app/main/default/objects/Solde_Conge__c/Solde_Conge__c.object-meta.xml
<CustomObject>
    <label>Solde Congé</label>
    <nameField>
        <displayFormat>SOLDE-{0000}</displayFormat>
        <label>Libellé Solde Congé</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solde Congés</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>