force-app/main/default/objects/Solde_Conge__c/fields/annee__c.field-meta.xml
<CustomField>
    <fullName>annee__c</fullName>
    <description>année du solde des congés</description>
    <inlineHelpText>année du solde des congés</inlineHelpText>
    <label>annee</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2031</fullName>
            </value>
            <value>
                <fullName>2032</fullName>
            </value>
            <value>
                <fullName>2033</fullName>
            </value>
            <value>
                <fullName>2034</fullName>
            </value>
            <value>
                <fullName>2035</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>