force-app/main/default/objects/Solde_Conge__c/fields/Cle_Unique_Annee_Ressource__c.field-meta.xml
<CustomField>
    <fullName>Cle_Unique_Annee_Ressource__c</fullName>
    <description>Champ unique pour empêcher les doublons pour la meme année et un même user</description>
    <inlineHelpText>Empêcher les doublons pour la même année et un meme user</inlineHelpText>
    <label>Cle_Unique Année Ressource</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>