force-app/main/default/objects/Solde_Conge__c/fields/Employe__c.field-meta.xml
<CustomField>
    <fullName>Employe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employé concerné par le congés</description>
    <inlineHelpText>Employé concerné par le congés</inlineHelpText>
    <label>Employée</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solde_Cong_s</relationshipName>
    <type>Lookup</type>
</CustomField>