force-app/main/default/objects/Solde_Conge__c/fields/jours_acquis_aout__c.field-meta.xml
<CustomField>
    <fullName>jours_acquis_aout__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours acquis août</description>
    <inlineHelpText>jours acquis août</inlineHelpText>
    <label>jours acquis aout</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>