force-app/main/default/objects/Solde_Conge__c/fields/jours_acquis_avril__c.field-meta.xml
<CustomField>
    <fullName>jours_acquis_avril__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours acquis avril</description>
    <inlineHelpText>jours acquis avril</inlineHelpText>
    <label>jours acquis avril</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>