force-app/main/default/objects/Solde_Conge__c/fields/jours_acquis_decembre__c.field-meta.xml
<CustomField>
    <fullName>jours_acquis_decembre__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours acquis décembre</description>
    <inlineHelpText>jours acquis décembre</inlineHelpText>
    <label>jours acquis decembre</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>