force-app/main/default/objects/Solde_Conge__c/fields/jours_acquis_fevrier__c.field-meta.xml
<CustomField>
    <fullName>jours_acquis_fevrier__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours acquis février</description>
    <inlineHelpText>jours acquis février</inlineHelpText>
    <label>jours acquis fevrier</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>