force-app/main/default/objects/Solde_Conge__c/fields/jours_acquis_janvier__c.field-meta.xml
<CustomField>
    <fullName>jours_acquis_janvier__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de jours acquis en janvier</description>
    <inlineHelpText>Nombre de jours acquis en janvier</inlineHelpText>
    <label>jours acquis janvier</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>