force-app/main/default/objects/Solde_Conge__c/fields/jours_acquis_juillet__c.field-meta.xml
<CustomField>
    <fullName>jours_acquis_juillet__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours acquis juillet</description>
    <inlineHelpText>jours acquis juillet</inlineHelpText>
    <label>jours acquis juillet</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>