force-app/main/default/objects/Solde_Conge__c/fields/jours_acquis_juin__c.field-meta.xml
<CustomField>
    <fullName>jours_acquis_juin__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours acquis juin</description>
    <inlineHelpText>jours acquis juin</inlineHelpText>
    <label>jours acquis juin</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>