force-app/main/default/objects/Solde_Conge__c/fields/jours_acquis_mai__c.field-meta.xml
<CustomField>
    <fullName>jours_acquis_mai__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours acquis mai</description>
    <inlineHelpText>jours acquis mai</inlineHelpText>
    <label>jours acquis mai</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>