force-app/main/default/objects/Solde_Conge__c/fields/jours_acquis_novembre__c.field-meta.xml
<CustomField>
    <fullName>jours_acquis_novembre__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours acquis novembre</description>
    <inlineHelpText>jours acquis novembre</inlineHelpText>
    <label>jours acquis novembre</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>