force-app/main/default/objects/Solde_Conge__c/fields/jours_acquis_octobre__c.field-meta.xml
<CustomField>
    <fullName>jours_acquis_octobre__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours acquis octobre</description>
    <inlineHelpText>jours acquis octobre</inlineHelpText>
    <label>jours acquis  octobre</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>