force-app/main/default/objects/Solde_Conge__c/fields/jours_pris_aout__c.field-meta.xml
<CustomField>
    <fullName>jours_pris_aout__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Jours pris aout</description>
    <inlineHelpText>jours pris en aout</inlineHelpText>
    <label>jours pris aout</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>