force-app/main/default/objects/Solde_Conge__c/fields/jours_pris_decembre__c.field-meta.xml
<CustomField>
    <fullName>jours_pris_decembre__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Jours pris en décembre</description>
    <inlineHelpText>Jours pris en décembre</inlineHelpText>
    <label>jours pris decembre</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>