force-app/main/default/objects/Solde_Conge__c/fields/jours_pris_juillet__c.field-meta.xml
<CustomField>
    <fullName>jours_pris_juillet__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours pris juillet</description>
    <inlineHelpText>jours pris juillet</inlineHelpText>
    <label>jours pris juillet</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>