force-app/main/default/objects/Solde_Conge__c/fields/jours_pris_juin__c.field-meta.xml
<CustomField>
    <fullName>jours_pris_juin__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>jours pris juin</description>
    <inlineHelpText>jours pris  juin</inlineHelpText>
    <label>jours pris juin</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>