force-app/main/default/objects/Solde_Conge__c/fields/jours_pris_mai__c.field-meta.xml
<CustomField>
    <fullName>jours_pris_mai__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours pris  mai</description>
    <inlineHelpText>jours pris mai</inlineHelpText>
    <label>jours pris mai</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>