force-app/main/default/objects/Solde_Conge__c/fields/jours_pris_mars__c.field-meta.xml
<CustomField>
    <fullName>jours_pris_mars__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours pris  mars</description>
    <inlineHelpText>jours pris  mars</inlineHelpText>
    <label>jours pris mars</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>