force-app/main/default/objects/Solde_Conge__c/fields/jours_pris_novembre__c.field-meta.xml
<CustomField>
    <fullName>jours_pris_novembre__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours pris novembre</description>
    <inlineHelpText>jours pris  novembre</inlineHelpText>
    <label>jours pris novembre</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>