force-app/main/default/objects/Solde_Conge__c/fields/jours_pris_octobre__c.field-meta.xml
<CustomField>
    <fullName>jours_pris_octobre__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours de congés pris en octobre</description>
    <inlineHelpText>jours de congés pris en ocobre</inlineHelpText>
    <label>jours pris octobre</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>