force-app/main/default/objects/Solde_Conge__c/fields/jours_pris_septembre__c.field-meta.xml
<CustomField>
    <fullName>jours_pris_septembre__c</fullName>
    <defaultValue>0</defaultValue>
    <description>jours pris septembre</description>
    <inlineHelpText>jours pris septembre</inlineHelpText>
    <label>jours pris  septembre</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>