force-app/main/default/objects/Solde_Conge__c/fields/Solde_Disponible__c.field-meta.xml
<CustomField>
    <fullName>Solde_Disponible__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Solde annuel Disponible</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>