force-app/main/default/objects/Solde_Conge__c/fields/solde_jours_de_cong_s__c.field-meta.xml
<CustomField>
    <fullName>solde_jours_de_cong_s__c</fullName>
    <description>solde des jours de congés pour l&apos;année</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>solde des jours de congés pour l&apos;année</inlineHelpText>
    <label>solde annuel jours de congés</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>