force-app/main/default/objects/Solde_Conge__c/fields/total_jours_acquis__c.field-meta.xml
<CustomField>
    <fullName>total_jours_acquis__c</fullName>
    <description>Total de jours acquis</description>
    <formula>jours_acquis_janvier__c + 
jours_acquis_fevrier__c +
jours_acquis_mars__c + 
jours_acquis_avril__c +
jours_acquis_mai__c  + 
jours_acquis_juin__c   +
jours_acquis_juillet__c + 
jours_acquis_aout__c + 
jours_acquis_septembre__c  + 
 jours_acquis_octobre__c + 
jours_acquis_novembre__c + 
jours_acquis_decembre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total de jours acquis</inlineHelpText>
    <label>Jours acquis sur l&apos;année</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>