force-app/main/default/objects/Solde_Conge__c/fields/total_jours_pris__c.field-meta.xml
<CustomField>
    <fullName>total_jours_pris__c</fullName>
    <description>Total des jours pris</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total des jours pris</inlineHelpText>
    <label>total annuel jours pris del delete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>