force-app/main/default/objects/Solde_Conge__c/fields/UsedDays__c.field-meta.xml
<CustomField>
    <fullName>UsedDays__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de jours par l&apos;employé pour l&apos;année en cours</description>
    <inlineHelpText>Nombre de jours utilisée par  l&apos;employé pour l&apos;année en cours</inlineHelpText>
    <label>Jours utilisés</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>