force-app/main/default/objects/Solde_Conge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>annee__c</columns>
    <columns>Employe__c</columns>
    <columns>Solde_Disponible__c</columns>
    <columns>UsedDays__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les congés</label>
</ListView>